--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 server.port=8081
 
-spring.datasource.username=root
-spring.datasource.password=0609
-spring.datasource.url=jdbc:mysql://localhost:3306/csye6225?useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
-
 mybatis.type-aliases-package=com.example.csye6225_zzy.pojo
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+
+custom.aws.accessKey=AKIAYUBUUEW4FIQ3I262
+custom.aws.accessSecret=qVjnapyGEzyWma+m44cUCmvQ0tzazxFygfDu37hE
+custom.aws.bucket=zzy.dev.domain.tld
