--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,6 +4,8 @@ env:
   NAME: csye6225-webapp-zzy.zip
   AWS_REGION: us-east-1
   S3_BUCKET: codedeploy.zzyweb
+  APP_NAME: csye6225-webapp
+  APP_DEPLOY_GROUP_NAME: csye6225-webapp-deployment
 
 on:
   push:
