--- a/src/main/resources/application-sql.properties
+++ b/src/main/resources/application-sql.properties
@@ -1,3 +1,3 @@
-spring.datasource.username=root
-spring.datasource.password=0609
-spring.datasource.url=jdbc:mysql://localhost/csye6225?useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+spring.datasource.username=csye6225
+spring.datasource.password=Zzy_19970609
+spring.datasource.url=jdbc:mysql://csye6225.csmgcqvxjptu.us-east-1.rds.amazonaws.com/csye6225?useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
