--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,10 @@ files:
   - source: web.jar
     destination: /usr/local
 hooks:
+  BeforeInstall:
+    - location: codedeploy/beforeInstall.sh
+      timeout: 180
+      runas: ubuntu
   ApplicationStart:
     - location: codedeploy/start.sh
       timeout: 180
