--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,6 +3,6 @@ server.port=8081
 mybatis.type-aliases-package=com.example.csye6225_zzy.pojo
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
-custom.aws.accessKey=AKIA2MF5NQGONUN46TRV
-custom.aws.accessSecret=pKhU/H1ifqv2ZZOI6PhG6jWMgZfvzDE+hpZgoOTL
+custom.aws.accessKey=${AWSACCESSKEY}
+custom.aws.accessSecret=${AWSSECRETKEY}
 custom.aws.bucket=zzy.prod.domain.tld
