--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -9,6 +9,8 @@ env:
 
 on:
   pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -22,7 +24,7 @@ jobs:
           java-version: 8
           distribution: 'adopt'
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn -B package --file pom.xml -Dmaven.test.skip=true
 
       - name: package
         run: |
