--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,6 +3,6 @@ server.port=8081
 mybatis.type-aliases-package=com.example.csye6225_zzy.pojo
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
-#custom.aws.accessKey=${AWSACCESSKEY}
-#custom.aws.accessSecret=${AWSSECRETKEY}
+custom.aws.accessKey=${AWSACCESSKEY}
+custom.aws.accessSecret=${AWSSECRETKEY}
 custom.aws.bucket=zzy.dev.domain.tld
