--- a/src/main/resources/application-sql.properties
+++ b/src/main/resources/application-sql.properties
@@ -1,3 +1,3 @@
-spring.datasource.username=""
-spring.datasource.password=""
-spring.datasource.url=jdbc:mysql://$/csye6225?useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+spring.datasource.username=${DBNAME}
+spring.datasource.password=${DBPASSWORD}
+spring.datasource.url=jdbc:mysql://${DBADDR}/csye6225?useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
