--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,3 +4,4 @@ mybatis.type-aliases-package=com.example.csye6225_zzy.pojo
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
 custom.aws.bucket=zzy.prod.domain.tld
+custom.aws.SNSTopic=${SNSTOPIC}
