--- a/src/main/resources/application-sql.properties
+++ b/src/main/resources/application-sql.properties
@@ -6,7 +6,7 @@ database1.datasource.driver=com.mysql.jdbc.Driver
 
 database2.datasource.username=${DBNAME}
 database2.datasource.password=${DBPASSWORD}
-database2.datasource.url=jdbc:mysql://${DBPASSWORD_REPLICA}/csye6225?createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+database2.datasource.url=jdbc:mysql://${DBADDR_REPLICA}/csye6225?createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
 database2.datasource.driver=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
