--- a/src/main/resources/application-sql.properties
+++ b/src/main/resources/application-sql.properties
@@ -1,12 +1,12 @@
 database1.datasource.username=${DBNAME}
 database1.datasource.password=${DBPASSWORD}
-database1.datasource.url=jdbc:mysql://${DBADDR}/csye6225?createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+database1.datasource.url=jdbc:mysql://${DBADDR}/csye6225?createDatabaseIfNotExist=true&useSSL=true&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
 database1.datasource.driver=com.mysql.cj.jdbc.Driver
 
 
 database2.datasource.username=${DBNAME}
 database2.datasource.password=${DBPASSWORD}
-database2.datasource.url=jdbc:mysql://${DBADDR_REPLICA}/csye6225?createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+database2.datasource.url=jdbc:mysql://${DBADDR_REPLICA}/csye6225?createDatabaseIfNotExist=true&useSSL=true&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
 database2.datasource.driver=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
